Fixed up a couple smmall errors. Added to questions 5 and 6.

--- a/seng438-a2-3.md
+++ b/seng438-a2-3.md
@@ -20,10 +20,12 @@
 
 | Method                                                           | Invalid | Valid | Invalid |
 |---|---|---|---|
-| contains()                                                       | input < 0 | 0 <= input <= 100 | input > 100 |
-| getUpperBound()                                                  | input <= 99 | input = 100 | input >= 101 |
-| getLowerBound()                                                  | input <= -1 | input = 0 | input >= 1 |
-| intersects()                                                     | input lower bound > 100 | 0 < input lower bound < 100<br>or<br> 0 < input upper bound < 100 | input upper bound < 0 |
+| ```contains()```                                                       | input < 0 | 0 <= input <= 100 | input > 100 |
+| ```getUpperBound()```                                                  | input <= 99 | input = 100 | input >= 101 |
+| ```getLowerBound()```                                                  | input <= -1 | input = 0 | input >= 1 |
+| ```intersects()```                                                     | input lower bound > 100 | 0 < input lower bound < 100<br>or<br> 0 < input upper bound < 100 | input upper bound < 0 |
+
+*Table 2.1: Example of Equivalence Partitioning for Range Class using an example range of \[0-100\]*
 
 <br>
 Drawbacks and Benefits of Mocking:<br>
@@ -42,12 +44,12 @@ you have explained in the test strategy section //above
 
 # 4 How the team work/effort was divided and managed
 
-&emsp;Over this lab, the team worked collaboratively in order to successfully complete the assignment. All group members were responsible for an equal share of work and completed their portions on time. Jesse and Aaron managed the mock tests while Ethan and Avi managed the tests for Range. The entire team collaborated on the lab document. 
+&emsp;Over this lab, the team worked collaboratively in order to successfully complete the assignment. All group members were responsible for an equal share of work and completed their portions on time. Jesse and Ethan managed the mock tests (applied pair programming with Avi/Aaron) while Aaron and Avi managed the tests for Range. The entire team collaborated on the lab document. 
 
 # 5 Difficulties encountered, challenges overcome, and lessons learned
 
-&emsp;Getting started on using Eclipse was a challenge within this lab, especially with the lab instructions being on an outdated version of Eclipse. Additionally, none of the team had much experience with Eclipse, so learning a new program added additional problems to the assignment. 
+&emsp;Getting started on using Eclipse was a challenge within this lab, especially with the lab instructions being on an outdated version of Eclipse. Additionally, none of the team had much experience with Eclipse, so learning a new program added additional problems to the assignment. After some trial and error, and utilizing pair-programming, we were able to overcome confusion regarding the Eclipse IDE, as well as understanding the techniques of black-box testing. The main lessons learned by all group members were gaining a better understanding of mock testing, as well as getting familiar with JUnit testing procedures. 
 
 # 6 Comments/feedback on the lab itself
 
-Text…
+No further comments or feedback on the lab. 
