Test case table (q3) added + formatted.

--- a/seng438-a2-3.md
+++ b/seng438-a2-3.md
@@ -36,11 +36,49 @@ Drawbacks and Benefits of Mocking:<br>
 
 # 3 Test cases developed
 
-Text…
-
-// write down the name of the test methods and classes. Organize the based on
-the source code method // they test. identify which tests cover which partitions
-you have explained in the test strategy section //above
+| **Class**                        | **Method**                                          | **Test Plan (Description)**                                                                                       | **P/F**                                                                                                 |
+| ---------------------------- | ----------------------------------------------- | ------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------- |
+| org.jfree.data.Range         | ```contains()```                                      | Testing if a number in the range is recognized.                                                               | P                                                                                                   |
+| org.jfree.data.Range         | ```contains()```                                      | Testing a number not in the range, greater than the upper bound is handled.                                   | P                                                                                                   |
+| org.jfree.data.Range         | ```contains()```                                      | Test a value not in the range, less than the lower bound.                                                     | P                                                                                                   |
+| org.jfree.data.Range         | ```contains()```                                      | Test the upper bound itself (inclusive range or not)                                                          | P                                                                                                   |
+| org.jfree.data.Range         | ```contains()```                                      | Test lower bound itself (lower bound inclusive)                                                               | P                                                                                                   |
+| org.jfree.data.Range         | ```contains()```                                      | Test if an entirely positive range handles a negative value properly (should not contain)                     | P                                                                                                   |
+| org.jfree.data.Range         | ```contains()```                                      | Test if an entirely negative range contains a negative value.                                                 | P                                                                                                   |
+| org.jfree.data.Range         | ```getUpperBound()```                                 | Test correct upper bound on positive-only range (what should be the correct one)                              | F: Expected correct upper bound, returned lower bound instead.                                      |
+| org.jfree.data.Range         | ```getUpperBound()```                                 | Test correct upper bound on a negative-only range                                                             | F: Expected correct upper bound, returned lower bound instead.                                      |
+| org.jfree.data.Range         | ```getUpperBound()```                                 | Test incorrect upper bound on a range                                                                         | P                                                                                                   |
+| org.jfree.data.Range         | ```getLowerBound()```                                 | Test correct lower bound on a positive-only range                                                             | P                                                                                                   |
+| org.jfree.data.Range         | ```getLowerBound()```                                 | Test correct lower bound on a negative-only range                                                             | P                                                                                                   |
+| org.jfree.data.Range         | ```getLowerBound()```                                 | Test incorrect lower bound on a range                                                                         | P                                                                                                   |
+| org.jfree.data.Range         | ```getLength()```                                     | Test correct length on a range                                                                                | P                                                                                                   |
+| org.jfree.data.Range         | ```getLength()```                                     | Test incorrect length comparison on a range                                                                   | P                                                                                                   |
+| org.jfree.data.Range         | ```getLength()```                                     | Test correct length comparison on a negative-only range                                                       | P                                                                                                   |
+| org.jfree.data.Range         | ```intersects()```                                    | Test input that should not intersect with the given range                                                     | P                                                                                                   |
+| org.jfree.data.Range         | ```intersects()```                                    | Test input range that overlaps with only the upper bound of the given range                                   | F: Return false, indicating that there is no intersection when there actually should have been      |
+| org.jfree.data.Range         | ```intersects()```                                    | Test input range that lies within the given range (full overlap/intersect)                                    | P                                                                                                   |
+| org.jfree.data.Range         | ```intersects()```                                    | Test input range that overlaps with only the lower bound of the given range                                   | P                                                                                                   |
+| org.jfree.data.DataUtilities | ```calculateColumnTotal(Values2D data, int column)``` | Testing sum of values in a given column using mocking. (Pre-made test, given)                                 | P                                                                                                   |
+| org.jfree.data.DataUtilities | ```calculateColumnTotal(Values2D data, int column)``` | Testing sum of values in given column index using mocking, custom 2D array.                                   | P                                                                                                   |
+| org.jfree.data.DataUtilities | ```calculateColumnTotal(Values2D data, int column)``` | Test passing in invalid column index value (negative index).                                                  | F: Should return 0, instead throws IndexOutOfBoundsException                                        |
+| org.jfree.data.DataUtilities | ```calculateColumnTotal(Values2D data, int column)``` | Test passing in a value larger than the array size.                                                           | F: Should return 0, instead throws IndexOutOfBoundsException.                                       |
+| org.jfree.data.DataUtilities | ```calculateRowTotal(Values2D data, int row)```       | Test calculating the values’ total in a given row index, using mocking.                                       | F: Did not add up the values, instead just returned the value at the given row index (with col = 0) |
+| org.jfree.data.DataUtilities | ```calculateRowTotal(Values2D data, int row)```       | Test passing in a negative index value.                                                                       | F: Should return 0, instead throws IndexOutOfBoundsException.                                       |
+| org.jfree.data.DataUtilities | ```calculateRowTotal(Values2D data, int row)```       | Test passing in an index value that is too large (out of bounds)                                              | F: Should return 0, instead throws index out of bounds exception                                    |
+| org.jfree.data.DataUtilities | ```createNumberArray(double[] data)```                | Test creating an array given a valid double[] input.                                                          | F: NumberArray seemingly drops the last element of the array passed into the arg.                   |
+| org.jfree.data.DataUtilities | ```createNumberArray(double[] data)```                | Test creating a NumberArray by passing in an empty array as the arg. Should create an empty NumberArray       | P                                                                                                   |
+| org.jfree.data.DataUtilities | ```createNumberArray(double[] data)```                | Test passing in an array with an element 0 in it. Should not produce any errors/exceptions                    | P                                                                                                   |
+| org.jfree.data.DataUtilities | ```createNumberArray(double[] data)```                | Test passing in an array with negative elements. Should not produce any errors.                               | P                                                                                                   |
+| org.jfree.data.DataUtilities | ```createNumberArray2D(double[][] data)```            | Test creating a 2d NumberArray given a valid 2d array argument.                                               | F: Seemingly replaces the last element of the first row with null.                                  |
+| org.jfree.data.DataUtilities | ```createNumberArray2D(double[][] data)```            | Test creating 2dNumberArray using an empty main array as the argument. Should produce no errors.              | P                                                                                                   |
+| org.jfree.data.DataUtilities | ```createNumberArray2D(double[][] data)```            | Test creating 2dNumberArray using an empty subarray as the argument. Should produce no errors.                | P                                                                                                   |
+| org.jfree.data.DataUtilities | ```createNumberArray2D(double[][] data)```            | Test creating 2DNumArr with the arg array having a different sized subarray compared to the main array.       | F: Seemingly dropped the first element, and replaced it with a null                                 |
+| org.jfree.data.DataUtilities | ```createNumberArray2D(double[][] data)```            | Test creating 2DNumArr with 0 values in the arg array. Should not produce any errors                          | P                                                                                                   |
+| org.jfree.data.DataUtilities | ```createNumberArray2D(double[][] data)```            | Test creating 2DNumArr with negative values in the arg array. Should produce no errors.                       | P                                                                                                   |
+| org.jfree.data.DataUtilities | ```getCumulativePercentages(KeyedValues data)```      | Test passing in a null value, should throw InvalidParameterException. Test using mocked KeyedValue interface. | F: Threw IllegalArgumentException.                                                                  |
+| org.jfree.data.DataUtilities | ```getCumulativePercentages(KeyedValues data)```      | Test valid mocked KeyedValues input, should return correct for the first value, no errors.                    | F: Returned incorrect value.                                                                        |
+| org.jfree.data.DataUtilities | ```getCumulativePercentages(KeyedValues data)```      | Test valid mocked KeyedValues input, should return correct for the second value, no errors.                   | F: Returned incorrect value                                                                         |
+| org.jfree.data.DataUtilities | ```getCumulativePercentages(KeyedValues data)```     | Test valid mocked KeyedValues input, should return correct for the third value, no errors.                    | F: Returned incorrect value                                                                         |
 
 # 4 How the team work/effort was divided and managed
 
