Finished up remaining sections of the Lab Doc. Final Version

--- a/seng438-a2-3.md
+++ b/seng438-a2-3.md
@@ -28,6 +28,9 @@
 *Table 2.1: Example of Equivalence Partitioning for Range Class using an example range of \[0-100\]*
 
 <br>
+&emsp;Refer to Table 2.1 above to get an idea of how we organized our ECT procedures. For us, it was more of a visualization tool rather than a strict procedure to follow, hence why the above table is just an example, we did not create tables to be followed for Eq. Partitioning. 
+
+<br>
 Drawbacks and Benefits of Mocking:<br>
     &emsp;Some drawbacks of mocking include difficulty creating mocks, understanding test cases written using mocks, and inconsistencies between mocks and the real objects. For someone creating mocks, it can be a tough concept to grasp, and can result in a lot of trial and error before getting anywhere close to the desired result. The same goes for someone looking over mocked tests, it can be difficult to trace a test case when there is so much more code involved - it can get messy quick. Another issue that arises with mocks is inconsistencies as compared to the actual program objects. During black-box testing, since the tester does not have direct access to the code and inner workings of the program, they may create a mock that works how it's supposed to, however the real object may end up having something wrong with it. If this is the case, the tests will pass with the mock, but since the object is wrong, the program may fail outside of testing. These inconsistencies can skew testing results, and provide a false sense of security, or conversly respond with failure even though the real program should have passed.
 
@@ -90,4 +93,4 @@ Drawbacks and Benefits of Mocking:<br>
 
 # 6 Comments/feedback on the lab itself
 
-No further comments or feedback on the lab. 
+&emsp;This lab was very informative and educational, it really helped our group solidify the concepts surrounding JUnit testing and Mocking. We felt that the instructions were clear and well presented, and the steps to understanding JUnit testing and setting up Eclipse IDE were good.
